Fixed a crasher. Also, improved batch conversion (fdo#37412, bnc#690798)

* The pointer is not removed from the array before 'delete'
* FilterMatcher now uses (input) content to guess better.

Signed-off-by: Petr Mladek <pmladek@suse.cz>